# mozaidic

./: .gitignore  Makefile  docker-compose.yml
Dockerfiles/Image Service/Buildfile/: Dockerfile  build.sh
Dockerfiles/Image Service/Runfile/: Dockerfile
Dockerfiles/Mosaic Service/Runfile/: Dockerfile
Dockerfiles/nginx/: Dockerfile
Frontend/: Dockerfile  Dockerfile.web  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  webpack.config.js
Frontend/src/: globals.d.ts  index.template.ejs  index.tsx
Frontend/src/components/: Hello.tsx  Landing.tsx  UploadButton.tsx
Frontend/src/css/: index.css  landing.css
Image Service/: CMakeLists.txt  Dockerfile
Image Service/docker/: Dockerfile
Image Service/includes/: crow_all.h  server.h  session.h
Image Service/sources/: main.cpp  server.cpp  session.cpp
Mosaic Service/: CMakeLists.txt
Mosaic Service/docker/: Dockerfile
Mosaic Service/includes/: image.h
Mosaic Service/sources/: image.cpp  main.cpp
Upload Service/: requirements.txt  upload.py
nginx/: default.conf
